--- a/templates/superadmin/invoice/show.html.twig
+++ b/templates/superadmin/invoice/show.html.twig
@@ -5,6 +5,7 @@
 {% block page_header %}
     <p class="text-2xl font-bold">Fiche facture</p>
     <div class="flex justify-end gap-3 text-sm">
+    {% if invoice.status != 'archived' %}
         <a href="{{ path('superadmin_invoice_edit', {'id': invoice.id}) }}">
             <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
                 <icon name="pencil" display="solid" color="white" size="4"></icon>
@@ -14,6 +15,7 @@
         <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-red-500 text-white">
             {{ include('superadmin/invoice/_delete_form.html.twig') }}
         </div>
+    {% endif %}
     </div>
 {% endblock %}
 
