garder le client present dans le devis/la facture lors de l'update

--- a/templates/admin/invoice/index.html.twig
+++ b/templates/admin/invoice/index.html.twig
@@ -24,6 +24,7 @@
         <th>Date de la facture</th>
         <th>Date d'échéance</th>
         <th>Création</th>
+        <th>Client</th>
         <th></th>
     {% else %}
         <th class="text-center">Aucune donnée</th>
@@ -55,6 +56,7 @@
 
                 à {{ invoice.createdAt|date('H') }}h{{ invoice.createdAt|date('i') }}
             </td>
+            <td>{{ invoice.customer }}</td>
             <td>
                 <div class="flex justify-end gap-3">
                     <a href="{{ path('admin_invoice_edit', {'id': invoice.id}) }}">
