--- a/templates/admin/quotation/index.html.twig
+++ b/templates/admin/quotation/index.html.twig
@@ -24,6 +24,7 @@
         <th>Date d'échéance</th>
         <th>Statut</th>
         <th>Création</th>
+        <th>Client</th>
         <th></th>
     {% else %}
         <th class="text-center">Aucune donnée</th>
@@ -55,6 +56,7 @@
 
                 à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
             </td>
+            <td>{{ quotation.customer }}</td>
             <td>
                 <div class="flex justify-end gap-3">
                     <a href="{{ path('admin_quotation_edit', {'id': quotation.id}) }}">
