--- a/templates/user/quotation/show.html.twig
+++ b/templates/user/quotation/show.html.twig
@@ -155,6 +155,7 @@
                     <th>Date d'échéance</th>
                     <th>Statut</th>
                     <th>Création</th>
+                    <th>Client</th>
                     <th></th>
                 </tr>
             </thead>
@@ -183,6 +184,7 @@
 
                         à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
                     </td>
+                    <td>{{ quotation.customer }}</td>
                     <td>
                     </td>
                 </tr>
