meilleure visibilité de l'entreprise/client pour superadmin

--- a/templates/admin/archive.html.twig
+++ b/templates/admin/archive.html.twig
@@ -29,6 +29,7 @@
                     <th>Date d'échéance</th>
                     <th>Statut</th>
                     <th>Création</th>
+                    <th>Client</th>
                     <th></th>
                 </tr>
             </thead>
@@ -57,6 +58,7 @@
 
                         à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
                     </td>
+                    <td>{{ quotation.customer }}</td>
                     <td>
                     </td>
                 </tr>
@@ -79,6 +81,7 @@
                     <th>Date d'échéance</th>
                     <th>Statut</th>
                     <th>Création</th>
+                    <th>Client</th>
                     <th></th>
                 </tr>
             </thead>
@@ -107,6 +110,7 @@
 
                         à {{ invoice.createdAt|date('H') }}h{{ invoice.createdAt|date('i') }}
                     </td>
+                    <td>{{ invoice.customer }}</td>
                     <td>
                     </td>
                 </tr>
