--- a/templates/superadmin/archive.html.twig
+++ b/templates/superadmin/archive.html.twig
@@ -29,6 +29,8 @@
                     <th>Date d'échéance</th>
                     <th>Statut</th>
                     <th>Création</th>
+                    <th>Client</th>
+                    <th>Entreprise</th>
                     <th></th>
                 </tr>
             </thead>
@@ -57,6 +59,8 @@
 
                         à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
                     </td>
+                    <td>{{ quotation.customer }}</td>
+                    <td>{{ quotation.company.name }}</td>
                     <td>
                     </td>
                 </tr>
@@ -79,6 +83,8 @@
                     <th>Date d'échéance</th>
                     <th>Statut</th>
                     <th>Création</th>
+                    <th>Client</th>
+                    <th>Entreprise</th>
                     <th></th>
                 </tr>
             </thead>
@@ -107,6 +113,8 @@
 
                         à {{ invoice.createdAt|date('H') }}h{{ invoice.createdAt|date('i') }}
                     </td>
+                    <td>{{ invoice.customer }}</td>
+                    <td>{{ invoice.company.name }}</td>
                     <td>
                     </td>
                 </tr>
