--- a/templates/superadmin/quotation/index.html.twig
+++ b/templates/superadmin/quotation/index.html.twig
@@ -25,6 +25,7 @@
         <th>Statut</th>
         <th>Création</th>
         <th>Client</th>
+        <th>Entreprise</th>
         <th></th>
     {% else %}
         <th class="text-center">Aucune donnée</th>
@@ -57,6 +58,7 @@
                 à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
             </td>
             <td>{{ quotation.customer }}</td>
+            <td>{{ quotation.company.name }}</td>
             <td>
                 <div class="flex justify-end gap-3">
                     <a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}">
