--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,26 +13,25 @@
 
                 {% if app.user %}
                     <div class="mb-4">
-                        Vous êtes connecté(e) comme {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}" class="text-blue-500 hover:text-blue-700">Me déconnecter</a>
+                        Vous êtes connecté(e) comme {{ app.user.userIdentifier }}
+                        </br>
+                        <a href="{{ path('app_logout') }}" class="text-blue-500 hover:text-blue-700">Me déconnecter</a>
                     </div>
+                {% else %}
+                    <h1 class="text-2xl font-semibold mb-4">Me connecter</h1>
+                    <div class="mb-4">
+                        <label for="inputEmail" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
+                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" autocomplete="email" required autofocus>
+                    </div>
+                    <div class="mb-4">
+                        <label for="inputPassword" class="block text-gray-700 text-sm font-bold mb-2">Mot de passe</label>
+                        <input type="password" name="password" id="inputPassword" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" autocomplete="current-password" required>
+                    </div>
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-3" type="submit">Me connecter</button><br>
+                    <a href="{{ path('app_register') }}" class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-3">M'inscrire</a><br>
+                    <a href="{{ path('forgotten_password') }}" class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-3">Mot de passe oublié</a>
                 {% endif %}
-
-                <h1 class="text-2xl font-semibold mb-4">Me connecter</h1>
-                <div class="mb-4">
-                    <label for="inputEmail" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" autocomplete="email" required autofocus>
-                </div>
-                <div class="mb-4">
-                    <label for="inputPassword" class="block text-gray-700 text-sm font-bold mb-2">Mot de passe</label>
-                    <input type="password" name="password" id="inputPassword" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" autocomplete="current-password" required>
-                </div>
-
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-3" type="submit">Me connecter</button><br>
-                <a href="{{ path('app_register') }}" class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-3">M'inscrire</a><br>
-                <a href="{{ path('forgotten_password') }}" class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-3">Mot de passe oublié</a>
-
             </form>
         
         </div>
