ajout de la company dans les categories

--- a/templates/admin/service/show.html.twig
+++ b/templates/admin/service/show.html.twig
@@ -49,6 +49,15 @@
 
     <div class="w-full flex">
         <div class="w-1/4 text-xs text-gray-500">
+            Catégorie
+        </div>
+        <div class="flex-1">
+            {{ service.category }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
             Date et heure de création
         </div>
         <div class="flex-1">
