--- a/templates/superadmin/category/show.html.twig
+++ b/templates/superadmin/category/show.html.twig
@@ -31,6 +31,15 @@
 
     <div class="w-full flex">
         <div class="w-1/4 text-xs text-gray-500">
+            Entreprise
+        </div>
+        <div class="flex-1">
+            {{ category.company.name ?? "" }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
             Date et heure de création
         </div>
         <div class="flex-1">
