--- a/templates/superadmin/category/index.html.twig
+++ b/templates/superadmin/category/index.html.twig
@@ -18,6 +18,7 @@
     {% if categories is not empty %}
         <th></th>
         <th>Libellé</th>
+        <th>Entreprise</th>
         <th>Création</th>
         <th></th>
     {% else %}
@@ -34,6 +35,7 @@
                 </a>
             </td>
             <td><a class="font-bold text-primary" href="{{ path('superadmin_category_show', {'id': category.id}) }}">{{ category.label }}</a></td>
+            <td>{{ category.company.name ?? "" }}</td>
             <td>
                 {% if today == category.createdAt|date('Y-m-d') %}
                     Aujourd'hui
