--- a/templates/superadmin/category/new.html.twig
+++ b/templates/superadmin/category/new.html.twig
@@ -1,11 +1,26 @@
-{% extends 'base.html.twig' %}
+{% extends 'superadmin/default/form.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block page_title %}Ajouter une catégorie de prestation - ArtBill{% endblock %}
+{% block page_header %}
+    <p class="text-2xl font-bold">Ajouter une catégorie de prestation</p>
+    <div class="flex justify-end gap-3 text-sm">
+        <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
+            <icon name="check" display="solid" color="white" size="4"></icon>
+            <input type="submit" value="Enregistrer">
+        </div>
+    </div>
+{% endblock %}
 
-{% block page_content %}
-    <h1>Create new Category</h1>
+{% block form %}
+    {% set fields = {
+        'label': 'Libellé',
+    } %}
 
-    {{ include('superadmin/category/_form.html.twig') }}
-
-    <a href="{{ path('superadmin_category_index') }}">back to list</a>
+    {% for field, label in fields %}
+        <div class="w-72 flex flex-col">
+            {{ form_label(form[field], label) }}
+            {{ form_widget(form[field]) }}
+            {{ form_errors(form[field]) }}
+        </div>
+    {% endfor %}
 {% endblock %}
