base_blank ou il faut

--- a/templates/base_blank.html.twig
+++ b/templates/base_blank.html.twig
@@ -15,7 +15,7 @@
     {% endblock %}
 </head>
 
-<body class="flex overflow-hidden">
+<body class="flex">
     {% block initializer %}{% endblock %}
 
     <header class="fixed top-0 left-0 right-0 z-50 h-11 flex justify-between items-center bg-gray-100 border-b-[1px] px-5 py-2">
