--- a/templates/base_blank.html.twig
+++ b/templates/base_blank.html.twig
@@ -16,14 +16,15 @@
 </head>
 
 <body class="flex">
-    {% block initializer %}{% endblock %}
+    <div id="container" class="h-screen flex flex-grow pt-11">
+        {% block initializer %}{% endblock %}
 
-    <header class="fixed top-0 left-0 right-0 z-50 h-11 flex justify-between items-center bg-gray-100 border-b-[1px] px-5 py-2">
-        <img class="w-auto h-full" src="./../../assets/images/logo.png" alt="ArtBill" />
-    </header>
+        <header class="fixed top-0 left-0 right-0 z-50 h-11 flex justify-between items-center bg-gray-100 border-b-[1px] px-5 py-2">
+            <img class="w-auto h-full" src="./../../assets/images/logo.png" alt="ArtBill" />
+        </header>
 
-    {% block page_content %}{% endblock %}
-
+        {% block page_content %}{% endblock %}
+    </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </body>
 
