--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Page non trouvée{% endblock %}
 
 {% block page_content %}
-    <main class="container">
-        <section class="row">
-            <div class="col-12">
-                <h1>Page non trouvée</h1>
-                <p>La page que vous recherchez n'a pas été trouvée.</p>            
+    <main class="container mx-auto">
+        <section class="flex justify-center items-center h-screen">
+            <div class="text-center">
+                <h1 class="text-4xl font-bold text-red-500 mb-4">Page non trouvée</h1>
+                <p class="text-lg text-gray-700">La page que vous recherchez n'a pas été trouvée.</p>
             </div>
         </section>
     </main>
