meilleur formulaire customer

--- a/templates/admin/default/form.html.twig
+++ b/templates/admin/default/form.html.twig
@@ -2,7 +2,7 @@
 
 {% block page_content %}
     <div id="form">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-y-4 overflow-y-auto text-sm m-6">
+        <div class="flex flex-col gap-4 overflow-y-auto text-sm m-6">
             {% block form %}{% endblock %}
         </div>
         <div class="flex flex-col gap-4 overflow-y-auto text-sm m-6">
