add delete link in every services  and refacto route

--- a/templates/_partials/_service_form.html.twig
+++ b/templates/_partials/_service_form.html.twig
@@ -1,17 +1,23 @@
-<ul class="services" data-index="{{ form.services|length > 0 ? form.services|last.vars.name + 1 : 0 }}" data-prototype="{{ form_widget(form.services.vars.prototype)|e('html_attr') }}">
-    {{ form_label(form.services) }}
-    <div id="li_container" class="flex gap-2">
-        {{ form_widget(form.services) }}
-    </div>
-    <button type="button" class="add_item_link" data-collection-holder-class="services">Ajouter un nouveau service</button>
+<h2> Services </h2>
+<ul id="services_container" class="services list-none flex flex-row" data-index="{{ form.services|length > 0 ? form.services|last.vars.name + 1 : 0 }}" data-prototype="{{ form_widget(form.services.vars.prototype)|e('html_attr') }}">
+    {% for service in form.services %}
+        <li class="mb-2 w-72">
+            {{ form_label(service) }}
+            {{ form_widget(service) }}
+            {{ form_errors(service) }}
+        </li>
+    {% endfor %}
 </ul>
+<button type="button" id="add_service" class="add_item_link" data-collection-holder-class="services">Ajouter un nouveau service</button>
+
 
 {% block javascripts %}
     <script>
         const addServiceFormDeleteLink = (item) => {
             const removeFormButton = document.createElement('button');
             removeFormButton.innerText = 'Supprimer ce service';
-            item.append(removeFormButton);
+            removeFormButton.classList.add('mt-2');
+            item.appendChild(removeFormButton);
 
             removeFormButton.addEventListener('click', (e) => {
                 e.preventDefault();
@@ -23,12 +29,13 @@
             const collectionHolder = document.querySelector('.' + e.currentTarget.dataset.collectionHolderClass);
             const item = document.createElement('li');
 
-            item.classList.add('mb-2');
+            item.classList.add('mb-2','list-none','w-72');
             item.innerHTML = collectionHolder.dataset.prototype.replace(/__name__/g, collectionHolder.dataset.index);
 
-            const liContainer = document.getElementById('li_container');
-            liContainer.insertBefore(item, liContainer.lastElementChild);
-            collectionHolder.dataset.index ++;
+            const ulContainer = document.getElementById('services_container');
+            ulContainer.insertBefore(item, ulContainer.lastChild);
+
+            collectionHolder.dataset.index++;
 
             addServiceFormDeleteLink(item);
         }
@@ -38,7 +45,7 @@
         });
 
         document.querySelectorAll('ul.services li').forEach((service) => {
-            addServiceFormDeleteLink(service)
-        })
+            addServiceFormDeleteLink(service);
+        });
     </script>
 {% endblock %}
