regroupement des partials default

--- a/templates/admin/quotation/edit.html.twig
+++ b/templates/admin/quotation/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/default/form.html.twig' %}
+{% extends '_partials/default/form.html.twig' %}
 
 {% block page_title %}Modifier un devis - ArtBill{% endblock %}
 {% block page_header %}
