--- a/templates/superadmin/service/edit.html.twig
+++ b/templates/superadmin/service/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'superadmin/default/form.html.twig' %}
+{% extends '_partials/default/form.html.twig' %}
 
 {% block page_title %}Modifier une prestation - ArtBill{% endblock %}
 {% block page_header %}
