--- a/templates/user/quotation/show.html.twig
+++ b/templates/user/quotation/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'user/default/sheet.html.twig' %}
+{% extends '_partials/default/sheet.html.twig' %}
 
 {% block page_title %}Fiche devis - ArtBill{% endblock %}
 
