--- a/templates/admin/user/new.html.twig
+++ b/templates/admin/user/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/default/form.html.twig' %}
+{% extends '_partials/default/form.html.twig' %}
 
 {% block page_title %}Ajouter un utilisateur - ArtBill{% endblock %}
 {% block page_header %}
