--- a/templates/superadmin/category/new.html.twig
+++ b/templates/superadmin/category/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'superadmin/default/form.html.twig' %}
+{% extends '_partials/default/form.html.twig' %}
 
 {% block page_title %}Ajouter une catégorie de prestation - ArtBill{% endblock %}
 {% block page_header %}
