--- a/templates/superadmin/quotation/index.html.twig
+++ b/templates/superadmin/quotation/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/default/list.html.twig' %}
+{% extends '_partials/default/list.html.twig' %}
 
 {% block page_title %}Devis{% endblock %}
 
