--- a/templates/superadmin/service/index.html.twig
+++ b/templates/superadmin/service/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'superadmin/default/list.html.twig' %}
+{% extends '_partials/default/list.html.twig' %}
 
 {% block page_title %}Prestations{% endblock %}
 
