--- a/templates/superadmin/service/new.html.twig
+++ b/templates/superadmin/service/new.html.twig
@@ -16,6 +16,7 @@
         'label': 'Libellé',
         'description': 'Description',
         'price': 'Prix',
+        'quantity': 'Quantité',
         'vat_rate': 'Taux de TVA',
         'category': 'Catégorie',
     } %}
